--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@
     @apply border-border;
   }
   body {
-    @apply h-full bg-background text-foreground;
+    @apply h-full h-full bg-background text-foreground;
   }
   html {
     @apply h-full;
